# grid-vidualizer

./: CMakeLists.txt  Makefile
src/: CGrid.cpp  CGrid.h  main.cpp
